Ajout du soutien Patreon

--- a/_data/haml_elements/sidebar.html.haml
+++ b/_data/haml_elements/sidebar.html.haml
@@ -1,4 +1,11 @@
 .sidebar-module
+  %h2 Nous soutenir
+  %p
+    %a{:href=>'https://www.patreon.com/LesCastCodeurs'}
+      %img{:src=>'/images/services/patreon.png', :width=>'32px', :height=>'32px'}
+      sur Patreon
+
+.sidebar-module
   %h2 Syndication
   %p
     %a{:href=>'/episodes'}
