--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -31,7 +31,7 @@
             %li
               %a{ :href=>"/crowdcasting" } Crowdcasting
             %li
-              %a{ :href=>"/parler" } (en) Parler
+              %a{ :href=>"/soutenir" } Nous soutenir
 
     ~ content
 
