Ajout des mentions légales

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -36,7 +36,9 @@
     ~ content
 
     .footer
-      %p &copy; 2009-#{Date.today.year} Emmanuel Bernard - Tous droits réservés
+      %p
+        &copy; 2009-#{Date.today.year} Codagora (Emmanuel Bernard) - Tous droits réservés -
+        %a{ :href=>"/legal" } Mentions légales
 
     -# Uncomment script tags (remove leading -#) when you're ready to use behaviors
     -# %script{ :type=>'text/javascript', :src=>'//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js' }
