--- a/_ext/template.atom.haml
+++ b/_ext/template.atom.haml
@@ -21,7 +21,7 @@
     - for entry in page.entries
       %entry
         %id #{site.base_url}#{entry.url}
-        %title= escape_once( entry.title )
+        %title= escape_once( entry.title ).better_html_to_xml
         %updated= entry.date.xmlschema
         %published= entry.date.xmlschema
         %link{:rel=>"alternate", :type=>"text/html", :href=>"#{site.base_url}#{entry.url}" }
@@ -37,7 +37,7 @@
             - else
               %name= entry.author
         %summary
-          #{summarize( html_to_text( entry.content ), 100 )}
+          #{summarize( html_to_text( entry.content ).better_html_to_text, 100 )}
         %content{:type=>'html'}
           = clean_html( html_escape( fully_qualify_urls( site.base_url, find_and_preserve( entry.content ) ) ) )
   
