--- a/_data/haml_elements/sidebar.html.haml
+++ b/_data/haml_elements/sidebar.html.haml
@@ -40,7 +40,7 @@
       %img{:src=>'/images/services/twitter_32.png'}
       @lescastcodeurs
   %p
-    %a{:href=>'https://usercast.listeningfrog.com/u/lescastcodeurs'}
+    %a{:href=>'/crowdcasting/'}
       %img{:src=>'/images/services/web_32.png'}
       Crowdcast
 
