--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,19 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import
-  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
-  "minima/initialize";
+@import "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+"minima/initialize";
+
+//
+// Custom style for homepage
+//
+
+.home .home-logo {
+  float: left;
+  margin: 1rem 1rem 0 0;
+}
+
+.home .post {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid lightgray;
+}
