--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,7 @@
   margin: 1rem 1rem 0 0;
 }
 
-.home .post {
+.post-list-item {
   padding-bottom: 1rem;
   border-bottom: 1px solid lightgray;
 }
