--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -7,32 +7,14 @@ layout: default
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
       Posté par
-
-      {%- if page.author -%}
-      {% for author in page.author %}
       <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-            <span class="p-author h-card" itemprop="name">{{ author }}</span>
+        <span class="p-author h-card" itemprop="name">{{ page.author | default: site.author.name }}</span>
       </span>
-      {%- if forloop.last == false %}, {% endif -%}
-      {% endfor %}
-      {%- else -%}
-      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-            <span class="p-author h-card" itemprop="name">{{ site.author.name }}</span>
-      </span>
-      {%- endif -%}
 
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       le
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {{ page.date | date: date_format }}
+        {{ page.date | date: site.date_format }}
       </time>
-      {%- if page.modified_date -%}
-      ~
-      {%- assign mdate = page.modified_date | date_to_xmlschema -%}
-      <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
-        {{ mdate | date: date_format }}
-      </time>
-      {%- endif -%}
     </p>
   </header>
 
@@ -40,9 +22,7 @@ layout: default
     {{ content }}
   </div>
 
-  {%- if site.disqus.shortname -%}
   {%- include disqus_comments.html -%}
-  {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
