Migration vers bootstrap
Ce commit nous rapproche de l'UI actuelle et terme de rendu et de fonctionnalité.

Pour conserver une maintenance facile les CSS / Javascripts de bootstrap sont :
- importés via des CDNs (afin de ne pas avoir à copier les fichiers à chaque mise à jour)
- déclaré dans la configuration du site (pour centraliser n'avoir qu'un endroit à mettre à jour)

L'utilisation de CDN ne permet par contre pas :
- la configuration et l'extension de bootstrap avec SAAS (car aurait nécessité de copier les SCSS de Bootstrap dans le projet)
- la mise à jour via bundler (car impossible sans utiliser jekyll-assets - qui ne supporte pas Jekyll 4 / n'est pas comptatible GitHub Pages)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,7 @@
-<footer class="site-footer h-card">
-  <data class="u-url" href="{{ '/' | relative_url }}"></data>
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col">
-        <p class="feed-subscribe">
-          <a href="{{ 'feed.xml' | relative_url }}">
-            <svg class="svg-icon orange">
-              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
-            </svg>
-            <span>Subscribe</span>
-          </a>
-        </p>
-
-        <ul class="contact-list">
-          <li class="p-name">{{ site.author.name | escape }}</li>
-          <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
-      </div>
-    </div>
-
-    <div class="social-links">
-      {%- include social.html -%}
-    </div>
-
-    <div class="footer-copyright">
-      &copy; 2009-{{ 'now' | date: "%Y" }} Codagora (Emmanuel Bernard)
-      - Tous droits réservés
-      - <a class="page-link" href="{% link legal.md %}">Mentions légales</a>
+<footer id="site-footer">
+  <div class="container">
+    <div class="text-center">
+      &copy; 2009-{{ 'now' | date: "%Y" }} Codagora (Emmanuel Bernard) &ndash; Tous droits réservés &ndash; <a href="{% link legal.md %}">Mentions légales</a>
     </div>
   </div>
 </footer>
