--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,63 +1,108 @@
 ---
 ---
 
-@import "minima/skins/{{ site.minima.skin | default: 'classic' }}",
-"minima/initialize";
+$header-color: rgba(255, 255, 255, .5);
+$header-color-hover: rgba(255, 255, 255, .75);
+$header-background-color: #251509;
+$heading-color: #997704;
+$card-background-color: #eeeeee;
+$link_color: #428bca;
 
 //
-// Homepage / Les épisodes
+// Layout
 //
 
-.home .home-logo {
-  float: left;
-  margin: 1rem 1rem 0 0;
+// https://medium.com/@mschenk22/bootstrap-4-footer-at-bottom-not-sticky-dynamic-footer-height-b37ccec837e2
+body, wrapper {
+  min-height: 100vh;
 }
 
-.post-list-item {
-  padding-bottom: 1rem;
-  border-bottom: 1px solid lightgray;
+//
+// Global
+//
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  color: $heading-color;
+}
+
+h1, .h1 {
+  font-size: 2.5rem;
+}
+
+h2, .h2 {
+  font-size: 2.25rem;
+}
+
+h3, .h3 {
+  font-size: 1.75rem;
+}
+
+h4, .h4 {
+  font-size: 1.25rem;
+}
+
+h5, .h5 {
+  font-size: 1.10rem;
+}
+
+a {
+  color: $link_color;
+}
+
+.btn-primary {
+  background-color: $link_color !important;
+}
+
+// Youtube
+iframe {
+  display: block;
+  border-style:none;
+  margin: 1rem auto;
 }
 
 //
-// L'équipe
+// Specific
 //
 
-.team-member {
-  margin-bottom: 1rem;
-  border-bottom: 1px solid lightgray;
+#site-nav, #site-footer {
+  color: $header-color !important;
+  background-color: $header-background-color !important;
 
-  .team-member-header {
-    margin-bottom: 1rem;
-
-    h2 {
-      display: inline;
-      margin-right: 0.5rem;
-    }
-
-    .team-member-links {
-      display: inline-block;
-      vertical-align: super;
-    }
+  a:hover {
+    color: $header-color-hover !important;
   }
+}
 
-  .team-member-description {
-    min-height: 150px;
-    margin-bottom: 1rem;
-
-    .team-member-photo {
-      width: 150px;
-      height: 150px;
-      margin-right: 1rem;
-      float: left;
-    }
+#site-footer {
+  div {
+    padding: .5rem 1rem .5rem;
   }
 }
 
+#site-sidebar .card,
+#site-sidebar .card .list-group-item,
+.jumbotron {
+  background-color: $card-background-color !important;
+}
+
+.jumbotron {
+  padding: 1rem 1rem;
+  font-size: 150%;
+}
+
 //
-// Footer
+// Utilities
 //
 
-.footer-copyright {
-  @extend .social-links;
-  text-align: center;
+.align-super {
+  vertical-align: super;
 }
