--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -1,11 +1,15 @@
 ---
 layout: default
 ---
+{%- include post-navigation.html -%}
+
+<hr>
+
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
+    <p class="post-meta text-muted">
       Posté par
       <span itemprop="author" itemscope itemtype="http://schema.org/Person">
         <span class="p-author h-card" itemprop="name">{{ page.author | default: site.author.name }}</span>
