--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+<article class="page">
+  <header class="page-header">
+    <h1 class="page-title">{{ page.title | escape }}</h1>
+    <hr>
   </header>
 
-  <div class="post-content">
+  <div class="page-content">
     {{ content }}
   </div>
 </article>
