--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,18 +2,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  {%- seo -%}
+  {% seo %}
 
-  {%- for css in site.dependencies.css -%}
+  {% for css in site.dependencies.css %}
   <link rel="stylesheet" href="{{ css.href }}" integrity="{{ css.integrity }}" crossorigin="anonymous">
-  {%- endfor -%}
+  {% endfor %}
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
-  {%- feed_meta -%}
+  <link type="application/atom+xml" rel="alternate" href="{{ '/feed.xml' | relative_url }}" title="{{ site.title | escape }}" />
 
-  {%- for script in site.dependencies.scripts -%}
+  {% for script in site.dependencies.scripts %}
   <script src="{{ script.src }}" integrity="{{ script.integrity }}" crossorigin="anonymous"></script>
-  {%- endfor -%}
+  {% endfor %}
 
   {%- include google-analytics.html -%}
 </head>
