--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -10,12 +10,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta text-muted">
-      Posté par
-      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span class="p-author h-card" itemprop="name">{{ page.author | default: site.author.name }}</span>
-      </span>
-
-      le
+      Posté le
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {{ page.date | date: site.date_format }}
       </time>
