Amélioration de la navigation
Les textes 'Précédent' / 'Suivant' on été supprimés de la pagination. Ils étaient trop grand pour la navigation sur mobile et cassaient la mise en page (apparition d'une scrollbar horizontale).

La barre de navigation en haut des articles qui permet de passer à l'article précédent / suivant à été revue :
- Les titres tronqués ont été remplacés par 'Précédent' / 'Suivant'. Un title a été ajouté sur les liens pour qu'on puisse quand même voir le titre de l'article au survol.
- Une navigation avec cette fois-ci le titre complet des articles a été ajoutée en fin d'article.

--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,12 +1,12 @@
 <nav aria-label="Pagination">
-  <ul class="pagination justify-content-center">
+  <ul class="pagination justify-content-center lead">
     {%- if paginator.previous_page -%}
     <li class="page-item">
-      <a href="{{ paginator.previous_page_path | relative_url }}" class="page-link">&laquo; Précédent</a>
+      <a href="{{ paginator.previous_page_path | relative_url }}" class="page-link">&laquo;</a>
     </li>
     {%- else -%}
     <li class="page-item disabled">
-      <span class="page-link">&laquo; Précédent</span>
+      <span class="page-link">&laquo;</span>
     </li>
     {%- endif -%}
 
@@ -37,11 +37,11 @@
     {%- endfor -%}
     {%- if paginator.next_page -%}
     <li class="page-item">
-      <a href="{{ paginator.next_page_path | relative_url }}" class="page-link">Suivant &raquo;</a>
+      <a href="{{ paginator.next_page_path | relative_url }}" class="page-link">&raquo;</a>
     </li>
     {%- else -%}
     <li class="page-item disabled">
-      <span class="page-link">Suivant &raquo;</span>
+      <span class="page-link">&raquo;</span>
     </li>
     {%- endif -%}
   </ul>
