--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-{%- include post-navigation.html -%}
+
+{%- include post-small-navigation.html -%}
 
 <hr>
 
@@ -25,3 +26,9 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+<hr>
+
+{%- include post-navigation.html -%}
+
+<hr>
