--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
   {% for script in site.dependencies.scripts %}
   <script src="{{ script.src }}" integrity="{{ script.integrity }}" crossorigin="anonymous"></script>
   {% endfor %}
+  <script src="{{ '/assets/simple-jekyll-search.js' | relative_url }}"></script>
 
   {%- include google-analytics.html -%}
 </head>
