Utilisation des icônes bootstrap-icons à la place des icônes PNG
Remplacement des icônes PNG dans la sidebar et sur la page equipe.html par des icônes bootstrap-icons (https://icons.getbootstrap.com/).

Les icônes bootstrap-icons supportent beaucoup mieux le resize et ne nécessitent pas de requêtes supplémentaires pour être récupérées (puisqu'on utilise déjà bootstrap-icons pour l'icône 'search').

Certaines icônes n'ont malheureusement pas pu être remplacées à l'identique car non disponibles dans bootstrap-icons :
- Patreon
- iTunes
- Licence CC
- Google groups

Les images inutilisées ont par ailleurs été supprimées. Pour savoir si une image est inutilisée où non :
> for image in $(find images -type f); do echo "$image:"; grep --exclude-dir=.git -Ril "$(basename $image)" .; echo; done

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,15 +5,15 @@
       <h4 class="card-title h3">{{ card.name }}</h4>
       <ul class="list-group list-group-flush">
         {% for link in card.links %}
-        <li class="list-group-item">
+        <li class="list-group-item list-group-item-action">
           {% if link.url %}
-          <a href="{{ link.url }}">
-            <img src="{% link {{ link.image }} %}" style="max-width: 2rem;"/>
+          <a href="{{ link.url }}" class="d-inline-flex align-items-center">
+            <em class="bi bi-{{ link.icon }} {{ link.color }} fs-2 mr-2"></em>
             {{ link.name }}
           </a>
           {%- else -%}
-          <a href="{% link {{ link.file }} %}">
-            <img src="{% link {{ link.image }} %}" style="max-width: 2rem;"/>
+          <a href="{% link {{ link.file }} %}" class="d-inline-flex align-items-center">
+            <em class="bi bi-{{ link.icon }} {{ link.color }} fs-2 mr-2"></em>
             {{ link.name }}
           </a>
           {%- endif -%}
