--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -115,3 +115,22 @@ iframe {
 .align-super {
   vertical-align: super;
 }
+
+.fs-1_5 {
+  font-size: 1.5rem;
+}
+
+.fs-2 {
+  font-size: 2rem;
+}
+
+//
+// Colors
+//
+.piggy-pink { color: #f4abba; }
+.black { color: black; }
+.twitter-blue { color: #1da1f2; }
+.google-group-blue { color: #4285f4; }
+.apple-podcast-violet { color: #a84adc; }
+.rss-orange { color: #ff6600; }
+.mic-grey { color: #95a5a6; }
