Inclusion des ressources externes (closes #95)
Inclusion des ressources récupérées sur jsdeliver au site. Cela clôture le sujet de la mise en conformité de lescastcodeurs.com avec la RGPD.

Au passage :

- Bootstrap a été mis à jour de 4.6.1 à 4.6.2
- Bootstrap Icons a été mis à jour de 1.8.2 à 1.9.1

Le script update-dependencies a été modifié pour y intégrer la mise à jour de ces ressources. L'API data.jsdelivr.com a été utilisé pour récupérer les versions à télécharger.

L'attribut integrity (SRI) n'a pas été repris : si on héberge nous même ces ressources ça perd un peu de son intérêt et ça complique un peu les choses. Il faudrait peut-être néanmoins vérifier l'intégrité de ces fichiers au moment de leur téléchargement mais, dans la mesure où les fichiers et les metadonnées proviennent de la même source (jsdelivr), pas sûr que ça sécurise beaucoup les choses.

Le guide de contribution a été remanié en conséquence.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,14 +4,13 @@
 
   {% seo %}
 
-  {% for css in site.dependencies.css %}
-  <link rel="stylesheet" href="{{ css.href }}" integrity="{{ css.integrity }}" crossorigin="anonymous">
-  {% endfor %}
+  <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/bootstrap-icons.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
   <link type="application/atom+xml" rel="alternate" href="/feed.atom" title="{{ site.title | escape }}" />
 
-  {% for script in site.dependencies.scripts %}
-  <script src="{{ script.src }}" integrity="{{ script.integrity }}" crossorigin="anonymous"></script>
-  {% endfor %}
+  <script src="{{ '/assets/js/jquery.slim.min.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/bootstrap.bundle.min.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/simple-jekyll-search.min.js' | relative_url }}"></script>
 </head>
