Modification du menu principal (closes #111)
Le togglers de la navbar s'affiche désormais plus tôt, empêchant ainsi les libellés de passer sur deux lignes.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="site-header">
-  <nav id="site-nav" class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
+  <nav id="site-nav" class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
     <div class="container">
       <a class="navbar-brand" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
 
