Amélioration du rendu du menu sur les très petits écrans
Sur les très petits écrans (320x480) le toggler n'était pas sur la même ligne que le nom du site. En supprimant quelques margins / paddings on améliore cela sans effets négatif autre que de réduire la largeur cliquable du toggler.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,6 +73,18 @@ iframe {
 // Specific
 //
 
+// Permet d'avoir un meilleur rendu sur de très petits écrans
+#site-header {
+  .navbar-brand {
+    margin-right: 0;
+  }
+
+  .navbar-toggler {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 #site-nav, #site-footer {
   color: $header-color !important;
   background-color: $header-background-color !important;
