Add YouTube, Simplify top meny, Add Bluesky

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -146,3 +146,4 @@ iframe {
 .apple-podcast-violet { color: #a84adc; }
 .rss-orange { color: #ff6600; }
 .mic-grey { color: #95a5a6; }
+.youtube-red { color: #ff0000; }
