--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -147,3 +147,4 @@ iframe {
 .rss-orange { color: #ff6600; }
 .mic-grey { color: #95a5a6; }
 .youtube-red { color: #ff0000; }
+.music-player-black { color: #000000; }
