--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer id="site-footer">
   <div class="container">
     <div class="text-center">
-      &copy; 2009&ndash;{{ 'now' | date: "%Y" }} Codagora (Emmanuel Bernard) &mdash; Tous droits réservés &mdash; <a href="{% link legal.md %}">Mentions légales</a> &mdash; <a href="{% link licence.md %}">Licence</a>
+      &copy; 2009&ndash;{{ 'now' | date: "%Y" }} Hexactgon SAS &mdash; Tous droits réservés &mdash; <a href="{% link legal.md %}">Mentions légales</a> &mdash; <a href="{% link licence.md %}">Licence</a>
     </div>
   </div>
 </footer>
